# prima

./: cmdfile.gdb  meson.build  meson_options.txt
.github/actions/spelling/: allow.txt
.github/workflows/: meson.yml  test_pyprima.yml
c/: meson.build
fortran/: meson.build
fortran/examples/: meson.build
pyprima/src/pyprima/: __init__.py
pyprima/src/pyprima/cobyla/: cobyla.py  cobylb.py  geometry.py  trustregion.py  update.py
pyprima/src/pyprima/common/: evaluate.py  linalg.py  message.py
pyprima/tests/: conftest.py  requirements.txt  test_miscellaneous.py  test_pycutest.py
