option('prima_heap_arrays', type : 'boolean', value : true, description : '''
Set additional Fortran compiler flags
1. We require the compilers to allocate arrays on the heap instead of the stack, which is
slower (does not matter for DFO applications) but can avoid memory errors on large problems.
2. We require the compilers to compile the solvers so that they can be called recursively.
See https://fortran-lang.discourse.group/t/frecursive-assume-recursion-and-recursion-thread-safety
'''
)

option('prima_enable_examples', type: 'boolean', value: false, description: 'Build examples.')
option('prima_enable_testing', type: 'boolean', value: false, description: 'Build tests.')
option('prima_enable_c', type: 'boolean', value: true, description: 'Build C interface.')
option('CI', type: 'boolean', value: false, description: 'Whether or not we are running in CI.')